# trinity

./: .gitignore  index.html  package-lock.json  package.json  start.sh  vite.config.js
backend/: pyproject.toml  server.py
backend/data/: sets.json
src/: Trinity.jsx  fonts.css  main.jsx  theme.js
