[project]
name = "trinity-backend"
version = "0.1.0"
description = "Trinity Backend"
authors = [{name = "dnl-strnl", email = "129630837+dnl-strnl@users.noreply.github.com"}]
readme = "README.md"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "python-multipart>=0.0.6",
    "huggingface_hub>=0.19.0",
    "websockets (>=16.0,<17.0)",
]
requires-python = ">=3.10"

[tool.poetry]
packages = [{include = "server.py"}]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
